[package]
name = "wavetable_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.0"
rand = "0.8.5"
home = "0.5.4"
signal-hook = "0.3.15"
linemux = {version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
